--- a/_posts/2015-05-30-waka-001.md
+++ b/_posts/2015-05-30-waka-001.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "和歌001|万葉恋歌 椿の章"
+title: "和歌001 万葉恋歌 椿の章"
 categories: [Japanese ]
 tags: [Japan, read, ]
 description: 和歌001 from 万葉恋歌 椿の章 Track 2&21
