--- a/_posts/2015-05-30-waka-001.md
+++ b/_posts/2015-05-30-waka-001.md
@@ -6,7 +6,8 @@ tags: [Japan, read, ]
 description: 和歌 001 from 万葉恋歌椿の章 Track02&21
 ---
 「稲搗けば かかる我が手を今夜もか 殿の若子が 取りて嘆かむ」
-*(CD原文版本)*
+
+*(CD原文标题)*
 
 
 **欣赏请戳**：分享石田彰的单曲[《「稲捣けばかかる我が手を今夜もか殿の若子が取りて叹かむ」》](http://music.163.com/song/416107/ )(@网易云音乐)
