categories and tag changed

--- a/_posts/2015-05-30-waka-001.md
+++ b/_posts/2015-05-30-waka-001.md
@@ -1,8 +1,8 @@
 ---
 layout: single
 title: "和歌 001 from 万葉恋歌椿の章 Track02&21"
-categories: [Japanese ]
-tags: [Japan, read, ]
+categories: [waka ]
+tags: [waka, read, ]
 description: 和歌 001 from 万葉恋歌椿の章 Track02&21
 ---
 「稲搗けば かかる我が手を今夜もか 殿の若子が 取りて嘆かむ」
