--- a/_posts/2015-05-30-waka-001.md
+++ b/_posts/2015-05-30-waka-001.md
@@ -1,5 +1,5 @@
 ---
-layout: archive-taxonomy
+layout: compress
 title: "和歌 001 from 万葉恋歌椿の章 Track02&21"
 categories: [waka ]
 tags: [waka, mannyousyuu, ]
